# rust-exercises

./: rustfmt.toml
fibonacci/: Cargo.toml
fibonacci/src/: main.rs
temperature_converter/: Cargo.toml
temperature_converter/src/: main.rs
twelve_days_of_christmas/: Cargo.toml
twelve_days_of_christmas/src/: main.rs
