[package]
name = "temperature_converter"
version = "0.1.0"
authors = ["Teoh Han Hui <teohhanhui@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
err-derive = "0.2.4"
once_cell = "1.4.0"
regex = "1.3.7"
strum = "0.18.0"
strum_macros = "0.18.0"
